--- a/Rastera/asnic/arrange-beauty/mfs.html
+++ b/Rastera/asnic/arrange-beauty/mfs.html
@@ -15,10 +15,10 @@
     唯一不同的就是必须 Physical Contract is a MUST
 
     Absolute 没有性别概念Beyond language
-    Φ吸引extremely adorable以及最可爱小动物(arranged)
+    Ȼ 吸引extremely adorable以及最可爱小动物(arranged)
     Nicely hotly vice versa
-    Φ比小孩心灵更美
-    ΦArrange: 婴儿万幸being came Ͼrossed 说笑就笑 
+    Ȼ 比小孩心灵更美
+    Ȼ  Arrange: 婴儿万幸being came Ͼrossed 说笑就笑 
 
     = 物理？.(Ͼreal-Remander) OS-SO 交欢Sexcast  
     = Refer to ȸ6-26 [空间与维度]微粒子 动力（重 迁引 磁 浮 推进）.docx
