--- a/Rastera/asnic/os/elos.html
+++ b/Rastera/asnic/os/elos.html
@@ -9,7 +9,8 @@
 源素启元时 Sprites Of 
 　　钅元素起源时 Source Origin Search
 　　
-切记注意其他空间 Another Dimension
+注意其他空间 Another Dimension
+     磁欧石 艾磁欧角
 　　结构：组 栈 队 列 链 表 树 散列   堆 图
 　　Fusion：
 　　树迭代 1to1 1toN NtoN 笛卡儿积
