--- a/Rastera/asnic/rastera/intel.html
+++ b/Rastera/asnic/rastera/intel.html
@@ -237,6 +237,24 @@
                 
          安迪.莱昂尼克:洛克梅根  人类 人性类化 //Defined.Renliy.Chinese:Andy; Individual?=(Divtional) Person Human              
     斯塔特.阿米格.安吉尔
+
+    物进处氨：英特尔巴巴 氖氖 冉电瑟踢
+    洞紧冕 //Water.RotateUtilizeNan.Renliy
+
+    吉卜赛人
+    shapeable.svg
+        Oni Roma-GeO~oni EvGypsies.J
+        Jeypiz Try'Flex'Ant
+    巴西方
+       织标量
+       成就感
+       白人.发明实物.眼光.墩
+       罐墩焖：GDM.Per~Potion.M&m //
+        罐：房子 建筑里 树林中 少接触外界
+        墩： 植物人 懒类型  Generic-O-Gravitional
+        悶：人类性格 心理 melancholy stu.dio.uffy
+       归类.范围.江山本
+     伞角族.点面
 </pre>
 </body>
 </html>
