--- a/Rastera/asnic/serenity/serenity.html
+++ b/Rastera/asnic/serenity/serenity.html
@@ -184,7 +184,7 @@ Woods 树林
     楚溪春 涨广背
 回溯
 
-地点：夜
+地点指向：地道桥
     柏拉图
     含羞草 
     粉色花冠树
@@ -201,7 +201,7 @@ Woods 树林
     腿被抡 因为老鼠 偷车子 的那个家属院
 回溯
 
-地点.巴西
+地点指向.巴西
 丁丁历险记
     瀑布内部 Peach land
     
