--- a/Rastera/asnic/rastera/intel.html
+++ b/Rastera/asnic/rastera/intel.html
@@ -246,7 +246,7 @@
         Oni Roma-GeO~oni EvGypsies.J
         Jeypiz Try'Flex'Ant
     巴西方
-       织标量
+       叁角足(织标量？.船串帝辛.接生姬依)画盅国 =O= 稀拉源 犀利致命疼
        成就感
        白人.发明实物.眼光.墩
        罐墩焖：GDM.Per~Potion.M&m //
@@ -254,7 +254,7 @@
         墩： 植物人 懒类型  Generic-O-Gravitional
         悶：人类性格 心理 melancholy stu.dio.uffy
        归类.范围.江山本
-     伞角族.点面
+     伞角族.点面圆溯源
 </pre>
 </body>
 </html>
