--- a/Rastera/asnic/analytical/requires.html
+++ b/Rastera/asnic/analytical/requires.html
@@ -46,7 +46,7 @@ Remote SquareShow DesktopScreen
 Velocity.js
 多点触控 类似于笔记本Pad 
     选择类似于下拉框AutoComplete
-<<<<<<< HEAD
+
 Astar.Build
     Pixel Color Direct
     Vesaid.Fan.Wave
@@ -56,6 +56,7 @@ DirectX真实材质墙面
     图形引擎 多个切换 融通
     九宫格 七巧板 老虎机
     Prey Dict Pray Dicked 
+Isoc.Vs2008 类图标 中文 三字码
 </pre>
     
     <script type="text/javascript">
