--- a/Rastera/asnic/rastera/intel.html
+++ b/Rastera/asnic/rastera/intel.html
@@ -255,6 +255,14 @@
         悶：人类性格 心理 melancholy stu.dio.uffy
        归类.范围.江山本
      伞角族.点面圆溯源
+
+    西方信竖斜格式：爱母乳癌婷之莱忑土滔铀 //I am writting a letter to tell you
+        姬晶灵 
+        电 锯氢
+        一角土 //Heathen 
+        林哥 //Green 
+        刘树烨紫 //磁欧石倒 压塌澜
+    维赛德 名册 布娃娃 人 陷入 勾引 地理位置 糟蹋
 </pre>
 </body>
 </html>
