--- a/AngelNetwork/analytical/language/formsize.html
+++ b/AngelNetwork/analytical/language/formsize.html
@@ -8,22 +8,30 @@
 </head>
 <body>
 <pre>
-Language.FormSize 
-English.Big:UpperCase
+FormSize 
+  English.Big:UpperCase
     ASD QEW REW QFD FDS
-English.Small:LowerCase
+  English.Small:LowerCase
     aid fyd wod elf edf 
-Arabian.Big
+  Arabian.Big
     /ھسداادھھسدا/
-Arabian.Small
+  Arabian.Small
     /—ژف—ژففژ—فژ—/
-Chinese.Big:Tradtional.Complex
+  Chinese.Simple.Complex:Formidable-Tradtional
     無論 還是 查實 譌變
     无论 还是 查实 讲变
-Another.Differes
+  
+  Another.Differes
 
-Speical
+  Speical
     Gapanize
+Leon.Language
+  Curly.Difference(Character,Rotate,Warbattle?)
+      Russia.P
+      Dech.R
+Letter.Transkulture
+    H Hellenic Grace India Aeichi //王Haeo
+  
 </pre>
 </body>
 </html>
