--- a/Rastera/asnic/serial/persvision.html
+++ b/Rastera/asnic/serial/persvision.html
@@ -200,6 +200,7 @@ Definition:PointBack.RangeFirst
 
 治疗附体的 支付 问什么 优先级
 铀元素：水晶 突然神经一抖楼 
+脑干牵连仙 想钥海兹 黄鼠狼唱歌 Fary 仙子 小恶魔幻想(stem-prostate)-(nose-dick) Hamsphere
   </pre>
 
     </div>
