--- a/Rastera/asnic/vesaier/revenez.html
+++ b/Rastera/asnic/vesaier/revenez.html
@@ -109,7 +109,8 @@ Hatred Fury Anaytical:?Cos->Stone:
            Status : Funny,Hurt,Whatever(self-notice)
            Level:Coregat - Line:26s
         Keywordiz:Mood
-
+GlassSlash 日本迦叶兹
+  闪瞎 如果是平常人 当场 胆囊躺下
     </pre>
 </body>
 </html>
