--- a/Rastera/asnic/vesaier/revenez.html
+++ b/Rastera/asnic/vesaier/revenez.html
@@ -111,6 +111,9 @@ Hatred Fury Anaytical:?Cos->Stone:
         Keywordiz:Mood
 GlassSlash 日本迦叶兹
   闪瞎 如果是平常人 当场 胆囊躺下
+Smelly Dis-attract
+  Against-Rivals
+  AnnoyingByain
     </pre>
 </body>
 </html>
