to be font and find exchange data

--- a/Rastera/asnic/rastera/intel.html
+++ b/Rastera/asnic/rastera/intel.html
@@ -300,6 +300,17 @@
   //关键词：范围
   //个人主义 集体主义 解决 创立者领导的仇恨
   //公报私仇 一己之私 动用不属于自己的集体力量 解决自己或周围的事情或仇恨
+
+  Smelly Dis-attract
+  Against-Rivals
+  AnnoyingByain
+  起源.蛟河.位置.易商.
+    露天 遮盖 地理位置 隐疱  
+    建筑艺术 服饰起源 西 中 东 顺序
+    石头 圆柱 宫殿 和服位置 移动房车
+     申  体 //酋 Tribe 宫廷中 东
+    树木 部落 
+  源起.塞卡斯特
 </pre>
 </body>
 </html>
