--- a/Rastera/asnic/rastera/intel.html
+++ b/Rastera/asnic/rastera/intel.html
@@ -311,6 +311,34 @@
      申  体 //酋 Tribe 宫廷中 东
     树木 部落 
   源起.塞卡斯特
+
+起源
+  群 族 氏 
+    斗争 
+  伏羲 亩系
+  钕挖：孤独 怜恋
+  得罪：群族？氏出铀银
+  一对一  一对多  多对多 多指一
+  亩夕：没伺候好
+  三角族：足立安 处女鸡蛋力田 娒侵
+  周蛹非 走之维 辽兆夜 ever-vegent.html Line:122s
+
+  战争向心力
+    母系：中国女折裂斯 一凸(艹皿艹 )化下 
+    维金.钕呙:不会钺阴银 不回蛹 
+    突厥：中东女战士 
+  丁玉儿
+    三角族.地理.梅州?.夕半牙朴滔亚.擒略.性惩.昏凤穴//Mixed Airfox Try-Group-Blood
+    Particle.SoftHard.Smell
+    Nndiggable
+   氏族性别吸引与叛变
+    族群 左艾 平淡无奇 安迪儿 逗比 辣椒 问题
+    女人没男人也不行 女儿国里 除非不知道男人的滋味打忘
+  索来德.中文->缅因州 女/->Truth  
+源起
+
+脂肪索引气牵 蓝色嵌入石 树没 金滋布置 
+
 </pre>
 </body>
 </html>
