--- a/Rastera/asnic/rastera/rast.html
+++ b/Rastera/asnic/rastera/rast.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="utf-8" />
       <title>1 继续救赎Rast</title>
-     
-    <link href="../../content/lumia-style/lumia.css" rel="stylesheet" />
+      
 </head>
 <body>
     <pre id="editor">
@@ -12,32 +11,32 @@
         <>()（）〈〉‹›﹛﹜ ［］《》﹝﹞〔〕{}「」【】︵︶︷︸︿﹀︹︺︽︾﹁﹂﹃﹄︻︼
 第三阶段后
 
-    bottom low middle high Redemption邪毒.?正
-    bottom low middle high sprite
-    bottom low middle high Distinguishing characters
-    bottom low middle high Atlantis Courier
-    bottom low middle high Angle L wolf 
-    bottom low middle high AC-MIS  mei sai yuan
-    bottom low middle high Wolf?.L.angle
-    bottom low middle high AngleWolf
-    bottom low middle high Cansai
-    bottom low middle high 起源 Source Origin
-    bottom low middle high 从danger wjcking.五大仙家   cansai  ALM 健康 以来问
-    bottom low middle high 下体到牵引 起源IF未知 复仇 牵引   东西转制 ALM 
-    bottom low middle Lhigh
-    shy-fe-ne-sos Atlantis’tube 
-    小时候脑海伯恩记忆 从出生牵引到 Anti~gaps 健康 参照健康docx
-    格兰蒂亚 tele-cfs former life
-    bottom low middle high眼 眉  健康
+  bottom low middle high Redemption邪毒.?正
+  bottom low middle high sprite
+  bottom low middle high Distinguishing characters
+  bottom low middle high Atlantis Courier
+  bottom low middle high Angle L wolf 
+  bottom low middle high AC-MIS  mei sai yuan
+  bottom low middle high Wolf?.L.angle
+  bottom low middle high AngleWolf
+  bottom low middle high Cansai
+  bottom low middle high 起源 Source Origin
+  bottom low middle high 从danger wjcking.五大仙家   cansai  ALM 健康 以来问
+  bottom low middle high 下体到牵引 起源IF未知 复仇 牵引   东西转制 ALM 
+  bottom low middle Lhigh
+  shy-fe-ne-sos Atlantis’tube 
+  小时候脑海伯恩记忆 从出生牵引到 Anti~gaps 健康 参照健康docx
+  格兰蒂亚 tele-cfs former life
+  bottom low middle high眼 眉  健康
 
-    bottom low middle high 党 串 Rositta
-    bottom low middle high 困 frame
-    bottom low middle high 面困 frame 6 plus	
-	bottom low middle high 困分化 晚吃一次 工面1
-    bottom low middle high 困分化  工面3
-    bottom low middle high  buginsect inner-danG^er 
-     bottom low middle high work group
-     bottom low middle high head&hand off bone Sos
+  bottom low middle high 党 串 Rositta
+  bottom low middle high 困 frame
+  bottom low middle high 面困 frame 6 plus	
+  bottom low middle high 困分化 晚吃一次 工面1
+  bottom low middle high 困分化  工面3
+  bottom low middle high  buginsect inner-danG^er 
+  bottom low middle high work group
+  bottom low middle high head&hand off bone Sos white-partial
 开始Rast
 
 Napoléon Bonaparte 贵格派 Quicker Quicker
@@ -204,8 +203,7 @@ ceng人 diao钓人
 女鬼事件
 Yellow老鼠带刀窜下体事件
   </pre>
-    <script src="../../content/ace-editor/ace.js"></script>
-    <script src="../../content/ace-editor/ace-settings.js"></script>
+
 </body>
 </html>
 
