--- a/Rastera/asnic/serial/persvision.html
+++ b/Rastera/asnic/serial/persvision.html
@@ -176,10 +176,17 @@ Definition:PointBack.RangeFirst
         3.与听讲人有关或无关，但是对自己有利
         4.对听讲人应该是有利
 人内不忘儿氏脑亚，外头打忘，
-直串类型：
-    处男憋气端口   处女之芯瑞博尔/@Port/ 
-        秘密，内斗，疼，冤枉
+江山本.端口.直串.柔推特
+  极端：恨 斗 秘密
+  处男憋气端口   
+    男 人魂 鬼 水里(动 物) 女    
+  处女之芯瑞博尔/@Port/ 
+    女 女仙 女鬼 女神 水里(动 物) 男
+    火车压过强：黑陇芝丁 浴火初钕陌  serenity.html
+     秘密，内斗，疼，冤枉
     飞虎队通讯：语言 秘密
+端口.出.启示
+
 吃饭没味道
     弧牵？：外牵
 陈婷罪（天倒过来 菱形?评测:Virgin|Sex-sky）
@@ -201,6 +208,9 @@ Definition:PointBack.RangeFirst
 治疗附体的 支付 问什么 优先级
 铀元素：水晶 突然神经一抖楼 
 脑干牵连仙 想钥海兹 黄鼠狼唱歌 Fary 仙子 小恶魔幻想(stem-prostate)-(nose-dick) Hamsphere
+
+附体 好不了 相信?(战争.怨起 宗教,其他 肉猪肋) 江山本峰 //Insane Creazy Retward
+
   </pre>
 
     </div>
