--- a/Rastera/asnic/vesaier/revenez.html
+++ b/Rastera/asnic/vesaier/revenez.html
@@ -96,7 +96,6 @@ Panic&Threat
 柯纳米方式/^Konami /
     俄罗斯方块 关口 
 
-
 Lonetype
     
 Hatred Fury Anaytical:?Cos->Stone:
@@ -111,7 +110,10 @@ Hatred Fury Anaytical:?Cos->Stone:
         Keywordiz:Mood
 GlassSlash 日本迦叶兹
   闪瞎 如果是平常人 当场 胆囊躺下
-
+Drawn-Badder
+  Caerer.Drawer.Masterpiece
+    EyeVision&AnotherPart
+    Self-Panic
     </pre>
 </body>
 </html>
