--- a/Rastera/asnic/rastera/heuristic.html
+++ b/Rastera/asnic/rastera/heuristic.html
@@ -204,7 +204,7 @@ Geother-Post-longfumarket：11-7
     语系：欧罗 突厥 汉藏
 
         华阴音 俄语  bi b 
-        上下赌点 分离 连贯 IsDirect IsDashed IsArc
+        上下赌点,分离,连贯,IsDirect,IsDashed,IsArc
         Persvision Position-Towards 大|小|写  
         Dd Ll
         反写都还顺手的
