--- a/Rastera/asnic/revenge/if.html
+++ b/Rastera/asnic/revenge/if.html
@@ -5,7 +5,7 @@
     <title>IF生命体 EXP牵引公式 [公式]IF未知 复仇 牵引</title>
 </head>
 <body>
-
+<pre>
 Lifespan = 108/180/258/508|1378
 Revenge =  each of 108 (rev) //Ͽ赛瑞尔神话 Behold Creal Mythology
 LetWestO LetEastO 
@@ -67,6 +67,6 @@ Half life HP 2
 积攒渴感 然后喝 凉啤酒 爽感
 黑暗一丝光明突破感
 颜色与形状牵引
-
+</pre>
 </body>
 </html>
