--- a/AutoDesk/dct-pixar-med.html
+++ b/AutoDesk/dct-pixar-med.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <pre>
-*Device:Comsek:Bodypart
+*Device:Comsek:Bodypart //dct
     keb:Keyboard(hand)
     mos:Mouse(hand)
     cam:Camera(Eye,Face,Body)
@@ -34,14 +34,14 @@
   
     dsk:Cd-disk 
 
-#Summary.Persection:DCT:Advent-O-Anyuser
+#Summary.Persection:Dct:Advent-O-Anyuser
     Inner
         Software.Hardware.Drive
     Outter                
         Software.Keyboard.Type
         Software.Mouse.Click:left,middle,right
         Hardware.Camera.Software
-    Interface
+    Interface.Inner-O-Outter
         Software.Hardware.Plug.Count
 
 *Autmost(EyeVision&Hand)  Anaytical.DataCollect
@@ -93,9 +93,29 @@ Pixel-Array
                         墙浴  池墙
                         墙墙墙墙墙
     结束
- gdi
-  gui
- 
+asm.tbc
+  cpp  #define
+    gdi
+    gui 
+   #def cpp
+
+  cxp.mil.net//IL = mil
+	  cpu.timer.mem
+	    tree lr rl root time 7 12 24 365 object
+	  vdo.gpu
+	  gdi+
+	  gui+
+	  dll.import
+	  type
+	
+	  gdi+
+	  gui+ 
+  end
+
+  jav.jvm
+
+  end
+asm.tbc.arm
 </pre>
 </body>
 </html>
