--- a/Rastera/asnic/rastera/workgroup.html
+++ b/Rastera/asnic/rastera/workgroup.html
@@ -76,6 +76,14 @@
 
 Left5: 1/8
     电工花括号大茶壶：利用创造人才的优势以及相关物理攻击本人 可能要了人命
+      惩酒甘荡作能力曲吸:
+        *战争.生命体.看不见生命体.维赛德
+        愚蠢 搅混水    
+      发明出来的物理性东西与手稿//没有计算机 关键词：被.迫 气铅        
+        偷窃 利用 埋没
+        秘密端口：打入冷宫
+          凶臼(肾支.土燃)脑公心//liquor
+      秘密//Intel.html Line:232s
     Ionic Lang Rant Back
         老鼠液画 
         牢狼回超
@@ -232,7 +240,7 @@ Left 2  23：08 SleepNot
                 不疼但是散了 细胞或粒子融合 
                 疼传到了愚蠢    
 
-         伊莱克斯 /O/ 艾塞克斯 \O\ /~Standout.LeonQuota~/
+         O 艾塞克斯 \O\ 伊莱克斯   /~Standout.LeonQuota~/
             人类角度：一眨眼功夫 300年过去 微粒子罗塞塔
             颜色？解决平淡无奇(最底层？） 到奇趣 平坦 
             概念：无生命体不孤独 动态里昂/^Not Standout Style/            
@@ -248,19 +256,19 @@ Left 2  23：08 SleepNot
         地球史前文明消失和外界星球联系与复苏：
             维金变形记
             老掌沟奇遇记
-            超自然生命体现象引导-定位到高等文明所在区域 // Persvision
-                海平面浮出消失的大陆
-                地外星球关联
             丁丁历险记 地心 
-             维塞尔 纪元文明//=Line:185s
-                 Ever-Vengent Henchunsic Kansidor for those   never  unforgettable being overthrowen whater they suffered earth-painfully
-                 Discover and locate  the lost Land
-                 Guide people that the lost civilization had already reappeared and located somewhere
-        消失：地底文明 浮出水面  传送技术 地外 
-            亚特兰蒂斯 利姆利亚 根达亚 苏美尔
-            磁欧石 爱磁欧 水晶 七彩珠 
+            超自然生命体现象引导-定位到高等文明所在区域 // Persvision
+              海平面浮出消失的大陆
+              地外星球关联
+            维塞尔 纪元文明//=Line:185s
+                Ever-Vengent Henchunsic Kansidor for those   never  unforgettable being overthrowen whater they suffered earth-painfully
+                Discover and locate  the lost Land
+                Guide people that the lost civilization had already reappeared and located somewhere
+        消失：地底文明 浮出水面  传送技术 地外文明连接
+            
         复苏
-
+          亚特兰蒂斯 利姆利亚 根达亚 苏美尔
+          磁欧石 爱磁欧 水晶 七彩珠 
        舅救
             大 搭救
             二 九个星球
@@ -284,7 +292,7 @@ Left Recthand-WaveAntiPillar
     从古至今 群体事件  孤独牵连 底盘理由责任推搡  //TribeGroup.Stain?=Detain
     *?肝素省 狮子王 婬敌安 丛林脍泡 TriangleGroup.Sexhidden.Plain-Forest
 
-    维吾尔与突桀.华夏?>妓克中 //Transturk.Requirement.Remove|Hide.LetterCode Transtruct 
+    突桀与维吾尔.忒涩.华夏?>妓克中 //Transturk.Requirement.Remove|Hide.LetterCode Transtruct 
         连
         竖上挑
         圈爱滋飘带
