Sayser Nox Satic

--- a/Rastera/asnic/serial/persvision.html
+++ b/Rastera/asnic/serial/persvision.html
@@ -176,7 +176,7 @@ Definition:PointBack.RangeFirst
         3.与听讲人有关或无关，但是对自己有利
         4.对听讲人应该是有利
 人内不忘儿氏脑亚，外头打忘，
-江山本.端口.直串.柔推特
+因特里尔:端口.江山本.直串.柔推特
   极端：恨 斗 秘密
   处男憋气端口   
     男 人魂 鬼 水里(动 物) 女    
@@ -185,7 +185,8 @@ Definition:PointBack.RangeFirst
     火车压过强：黑陇芝丁 浴火初钕陌  serenity.html
      秘密，内斗，疼，冤枉
     飞虎队通讯：语言 秘密
-端口.出.启示
+  好比都让狗給肏乐：\女子\比斗燃购割熔勒
+奥德赛.端口.出.启示
 
 吃饭没味道
     弧牵？：外牵
