--- a/Rastera/asnic/rastera/intel.html
+++ b/Rastera/asnic/rastera/intel.html
@@ -124,27 +124,29 @@
   为了所爱的人 Au nom de tous les miens (1985)
 
   HandMovment,Timespan and Ayonic.Revelate
-      Sex impluse being controlled,shade the girls being harassmented doing those they did NOT like
-      Tiny active impluse  behavior just for a PHYSICAL pleasure,especially underbody, will be doomed for all.
-      Water true false, Purity and Renliy time being 
-      The difference of Being harassment,Making love, Hand movment, Vesayna
+    Sex impluse being controlled,shade the girls being harassmented doing those they did NOT like
+    Tiny active impluse  behavior just for a PHYSICAL pleasure,especially underbody, will be doomed for all.
+    Water true false, Purity and Renliy time being 
+    The difference of Being harassment,Making love, Hand movment, Vesayna
 
-      Renliy specimen:
-      Gman?.Virgin.Moive.RomanSexMachine
-      Kolor dirt pusa
-      Rhrea might be an example: Kind, being did with variety of  people, without any tiny physical,active body contact
+    Renliy specimen:
+    Gman?.Virgin.Moive.RomanSexMachine
+    Kolor dirt pusa
+    Rhrea might be an example: Kind, being did with variety of  people, without any tiny physical,active body contact
 
-      Battle Sex Jealous
-          Source.Renliy.TinyDiscomfort?.Start.Tribe-AOR-Herb.Exchange
-              Solid.HardWare:Wood,Stone,Steel,Bronze,Silver,Gold
-                  Arosen:Alfed.Anglar
-              Soft.Animals:Painful Slaughtered then rotate became human
-                  Deal:Let animal in port-al balance^ly, instead of pain
-                  Waterize:Feed Drink Wait Autill
-          Joint.MetricWhom
-          Gaps
+    Battle Sex Jealous
+        Source.Renliy.TinyDiscomfort?.Start.Tribe-AOR-Herb.Exchange
+            Solid.HardWare:Wood,Stone,Steel,Bronze,Silver,Gold
+                Arosen:Alfed.Anglar
+            Soft.Animals:Painful Slaughtered then rotate became human
+                Deal:Let animal in port-al balance^ly, instead of pain
+                Waterize:Feed Drink Wait Autill
+        Joint.MetricWhom
+        Gaps
 
-          Water.Boolean?.Utilizing.Revenz.Bloom //revenez.html
+    Water.Boolean?.Utilizing.Revenz.Bloom //revenez.html
+      Alablada.Appearance:Facial~Another.KansaiF
+      Princes.Effect //郑明雪.飞思.争鸣学.宏观指导限制自由度.围观交流.江山本.不知不觉
   End
 
   茶壶 花括号 钍觉鱼/-{(چۋېروڭۇ)}-/
@@ -312,13 +314,12 @@
     树木 部落 
   源起.塞卡斯特
 
-起源
-  群 族 氏 
+起源. 群，族，氏,宗教
     斗争 
   伏羲 亩系
   钕挖：孤独 怜恋
   得罪：群族？氏出铀银
-  一对一  一对多  多对多 多指一
+    一对一  一对多  多对多 多指一
   亩夕：没伺候好
   三角族：足立安 处女鸡蛋力田 娒侵
   周蛹非 走之维 辽兆夜 ever-vegent.html Line:122s
@@ -334,8 +335,18 @@
    氏族性别吸引与叛变
     族群 左艾 平淡无奇 安迪儿 逗比 辣椒 问题
     女人没男人也不行 女儿国里 除非不知道男人的滋味打忘
-  索来德.中文->缅因州 女/->Truth  
+
+  孔聚
+    索来德.缅因州 女
+      Truth:American.TolucaLake(Silent.Rabbit.Blood.Milk.Panic.Atlantic.Axisit)Ketub.Zozou
+    马里兰.鸟锂澜轴.基茨维尔.女.形状优先.井十文
+      Burkittsville.Keyboard(#) Trans Kurse Burn Burel Isolate Konfined Well.BeinFaced
+    爱兰维克.克轴挤
+      hospital.ill.nearly^core.gravity.ketub
+  地理
+  
 源起
+  
 
 脂肪索引气牵 蓝色嵌入石 树没 金滋布置 
 房脍梓/Zi/：书斜蹄：偏旁 主笔 挑刺 搁我
