--- a/Rastera/asnic/serenity/serenity.html
+++ b/Rastera/asnic/serenity/serenity.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title></title>
     <script src="../../content/jquery/jquery-3.5.1.min.js"></script>
-    <link href="../../content/lumia-style/lumia.css" rel="stylesheet" />
+ 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 </head>
@@ -17,10 +17,12 @@
     -->
 <div id="contain" style="height:1000px;">
 <pre id="editor">
+
 AC时空 光线(能量) 牵引性生命体	
 阿萨尼亚克 塞纳时空之美：感知-记忆-回忆-追忆-灵境（过去时~梦）-意境 
 颜色Colorful通用语言 Vesaid 表达or What
 窗外黄米饭
+
 星矢 弓箭 翅膀 性别 五岁 白杨树
 　　交通局粪勺焚烧
 　　Baimuda三角whirl?.耶稣受难日AD BC 十字军东征 沙拉哈钉　　
@@ -62,13 +64,14 @@ AC时空 光线(能量) 牵引性生命体
     去往西方：幻世录 翼人 白色的翅膀 高洁 picture 空间 穿越 范围 向西 类似于帕特农神庙 圆柱
  回溯
 
-地点.印象可关联.华琛主板
+地点.印象.关联.华琛主板
         去亲戚家政治？希拉来的正方形
         跟江泽民有关 六四
 　　灵境
 　　二子从床上起来要去Work躺着其实不是
 　　80后 （Democrat）
-地点：希腊欧洲
+
+地点：希腊-O-欧洲
          希腊：Athena kidimage jailfleet->sky 超越 别人高洁(virginal pure texticles) 追求无敌
 　　吐鲁番 corridor for realistic
 　　MFS Mutilple Feeling Sexcast
@@ -80,6 +83,19 @@ AC时空 光线(能量) 牵引性生命体
 　           Hades.Ace
         希腊呃罗斯.俄罗斯 ice-what soft ace acm
 回溯
+
+地点.意大利.欧洲
+  让蕾诺 //leisure ass-ass-in
+  港口 //Scenery
+回溯.起始.日本.天马
+
+地点.德国.欧洲
+  来银河 
+  孩童
+  铀?.船怂 //20000 Leagues Under the Sea
+    锐波儿.背水澈鑫 //Sorrow Wrappered
+传送.回逆
+
 
 天梯：星际楼顶上卫星天线 Celestial 生命体 夏田 海怕？=快结束
 钓鱼 一条向东流的小溪
@@ -137,7 +153,7 @@ Woods 树林
 回溯
 
 地点 印象
-         铀元素
+    铀元素
 　　安吉尔 角
 　　水上魂斗罗 第三关 关头 分列 人 
 　　小女孩的鞋子
@@ -236,9 +252,7 @@ Ref-Sense
 </div>
 </div>
 
-<div id="java">
-    <script src="../../content/ace-editor/ace.js"></script>
-    <script src="../../content/ace-editor/ace-settings.js"></script>
+<div id="java"> 
     <script type="text/javascript">
        // Asnical = 
     </script>
