--- a/Rastera/asnic/rastera/regroup.html
+++ b/Rastera/asnic/rastera/regroup.html
@@ -38,7 +38,7 @@
     美 软肋 //From MetalPost to BeautySexcast   
     寄生前夜 //Transcolor.html line:121s
     动作.动态.部位：是否动物性.比率
-      走路
+      走路 /keywordiz:twist.bodypart
 赛瑞尔//Serial
 
 Nox.Norton.Vknet  
@@ -74,6 +74,8 @@ Leonic.Anti->Alone.Intelligent.KansaiF
   Alloy.Allian.Aillen.Mercury.Body //妓盅克.氖挤
   
 Leonik.Rockmega.Feedback
+
+Bone.Cos.Hard->Soft->Mian->Utilize
 </pre>
 </body>
 </html>
