--- a/Rastera/asnic/crealmytth/cfs-facial.html
+++ b/Rastera/asnic/crealmytth/cfs-facial.html
@@ -8,16 +8,26 @@
 <textarea>
 Ediz1chy 2020/8/23 ＋桌拍卍
 
-Portal:Solid Ketself Getself SefGet Vesaid 
-    嘴 巴 舌 头 喉 咙 （嗓子)牙（齿）嘴唇 (最射后鸭唇 Vesaid anemo AOT AOZ)
-    安卡 ONITongue 舌头 
-    Throat 
-    SelfGet Aeges(Rygas) △
-    CK
-    Lip 嘴唇 尊称
-    P T
-    Other oral ACtavity;
-ϿᴂlfGet
+CellWyde.Cellivate  
+  Arnold:Nose
+    Ayemake.Language.Dotell.Heuristic //formsize.html
+  Original
+  Formed
+    Trade?.Tradtional
+  Civilized 
+  Embrassment 
+  
+  鼻
+  安卡 ONITongue 舌头 
+  Throat 
+  SelfGet Aeges(Rygas) △
+  CK
+  Lip 嘴唇 尊称
+  P T
+  Other oral ACtavity;
+  Portal
+  //嘴 巴 舌 头 喉 咙 （嗓子)牙（齿）嘴唇 (最射后鸭唇 Vesaid anemo AOT AOZ)
+Caitial
 </textarea>
 </body>
 </html>
