--- a/Rastera/asnic/rastera/intel-group.html
+++ b/Rastera/asnic/rastera/intel-group.html
@@ -12,7 +12,7 @@
     序列：水 因 金 （光 电 热）土 火 木
   波恩.创世纪.诺克斯盾    
     
-    关键词：最 忽略 创造力 姓蹩 歧视
+    关键词：最 忽略(眼妕*平淡无奇*川松)平坦奇趣 创造力 姓蹩 歧视
     
     左.男
       轻 重 软 硬 
@@ -67,7 +67,7 @@ Language.Europack.character //寓言修缮
 Leonic.Anti->Alone.Intelligent.KansaiF
  
   ChemcialPerodic.Tablet.Sunshine.LightenBeam.Pentagram
-  KansaiF.Shapeable?.LeonStart
+  KansaiF.Leon.Calline.Shapeable?.LeonStart
   KansaiF.Renliy
     Penetriate.What?
   Roswell.Roosevelt.Fifty-O-Feet.Area //EyeRhea
@@ -75,7 +75,50 @@ Leonic.Anti->Alone.Intelligent.KansaiF
   
 Leonik.Rockmega.Feedback
 
-Bone.Cos.Hard->Soft->Mian->Utilize
+Wjcking.Bone.Cos.Hard->Soft->ExpandMian->Utilize
+Keyword:Kaiter Trykon
+**************************
+Jewish.Kolor.Israel.Alfed.God(Je1zus)Megan.Marshea?-Island:Ayeland
+  铀怨素 //Uren
+  Radio.Active.Uran.Dct.Cpu.Timer
+  Female.Deliver.Kidof?:
+  Uranus.Under.Cuted
+  Wjcking.Under.KnifeStabbed?:
+  Latwesto.Weaser
+  Rateasto.Moss.Sensiable.Underhair
+  Brother.Usedto.Creal.Term.Examples:
+    Alfed.First
+  Kater.KLll.Mutual^ly
+    Brother,Friend!=Fiend,Family
+
+  Pbc.Chm.Euren.Hole.Hard.SwearOut.Pressured.ExhaustHole.Out 
+  姬中克:挤忠咳.科浪河
+  所罗门之格
+  索罗们之歌
+  梭罗美之鈅
+  锁螺闷支腰:
+  佐罗//Zorro Zuol    
+  Mojave.Hook.Ketub.What
+Young.Chinese.Sheep.Slaughter
+
+Kater.Saber@Cybert.Special.Animall.ToothFirst.Reason.Trykon
+  Metric.Which:Mayich
+  Alfed.Orginal.AniStart.RequreFirst
+  Renliy.HeadMust.Mouth:?Olick
+    Drink~Eat~BitePower.Material:Grass.Rope:?Robe
+  Pigglet.Self.Illness.katered
+  Restera.Renlay.Rotate.Tymidiz->Revevge
+  Pertinent.SolidProveF.Vesaid.HeadFirst.Mouth.Speak
+  Behold.Solomen.Hold
+    Dare.Summon.Solidiare.Solitary
+  Metrik.Mamonth~Mommy.Mum.Mother
+Mayich.Slaughtered
+
+Africa.America.Tryide.Tide.Black
+  Virus.Paceful.Nation.Africa
+  Ace.Trans.Person
+  Kater.Hole.hoil~BlackDeath
+EyeFreak.Steak
 </pre>
 </body>
 </html>
