--- a/Rastera/asnic/iw/wdc.html
+++ b/Rastera/asnic/iw/wdc.html
@@ -6,7 +6,7 @@
     <title>[架构]星际战争-WDC-SE</title>
 </head>
 <body>
-<textarea>
+<pre>
 星际战争IW WDC  Architecture 
 Solid
 Earthmetric
@@ -27,6 +27,6 @@ Chronosphere
 (1)Cansai-Search
 7.Half Φ Life
 8.Cansai从模拟人生 到 美 每 镁 LiveVividBeings Meisai
-</textarea>
+</pre>
 </body>
 </html>
