--- a/Rastera/asnic/access-term/term.html
+++ b/Rastera/asnic/access-term/term.html
@@ -197,14 +197,17 @@ AJAX Codex
 hliGaokter
 　　henCEnzic kanSzidor CallJuarez
 
-Gede 
+歌德：Gede 
     Nick 
     Elante 
     Rhrea //era
 
 杨明：天抱怨量
     不是去上
+
+神话 反射 小说 色彩 //TitleShot.FirstAnalytical
 </pre>
+
         <div id="compiler">
             <div id="console"></div>
             <div id="table"></div>
