--- a/Rastera/asnic/access-term/term.html
+++ b/Rastera/asnic/access-term/term.html
@@ -197,7 +197,10 @@ AJAX Codex
 hliGaokter
 　　henCEnzic kanSzidor CallJuarez
 
-歌德：Gede 
+歌德：Gede
+      ThransLect.TranizRanket
+        Name.JkRowking
+        Geographic.Manchester.Baidu:County^//~郡:因果.忠动(祸澈).冬房(重锅)
     Nick 
     Elante 
     Rhrea //era
@@ -205,7 +208,9 @@ hliGaokter
 杨明：天抱怨量
     不是去上
 
-神话 反射 小说 色彩 //TitleShot.FirstAnalytical
+神话 反射 
+          小说 色彩 //TitleShot.FirstAnalytical
+          传说
 </pre>
 
         <div id="compiler">
