--- a/Rastera/asnic/rastera/king-group.html
+++ b/Rastera/asnic/rastera/king-group.html
@@ -37,8 +37,19 @@
     源起.昆汀//workgroup.html line:53s
     美 软肋 //From MetalPost to BeautySexcast   
     寄生前夜 //Transcolor.html line:121s
-    动作.动态.部位：是否动物性.比率
+  词性.磁性
+    动作.性态.部位：是否动物性.比率      
       走路 /keywordiz:twist.bodypart
+    形容.静态
+      歌德.电视剧.封什邦：苏妲己.窕兀.吸雙班娜 崆缺吴
+    Geodem.Dancing.Screen.Gedee.?Clothes.Screen.MightNote.Impressed
+    Geede.Movie.Keyword:
+      Cover,Clothes,Reflection
+      Reflect.Moive.Acters
+      Reflect.Moive.Directors      
+      Reflect.Moive.Observer&Guest
+    Screen.Reflect.Conduct.Effect.Watcher
+  磁性.词性
 赛瑞尔//Serial
 
 Nox.Norton.Vknet  
