--- a/AngelNetwork/analytical/advent.html
+++ b/AngelNetwork/analytical/advent.html
@@ -287,6 +287,8 @@ Aisock
     Flat.DisplayScreen.3d.Gaps.Analytical.Metric.Meticals
 Webster
     单条 与 三角 //Advertisaiz
+Curl
+    Thread for each website enum 2 square
 </pre>
     <script type="text/javascript">
         var p = $("#editor").html();
