--- a/Rastera/asnic/rastera/king-group.html
+++ b/Rastera/asnic/rastera/king-group.html
@@ -5,7 +5,7 @@
     <title></title>
 </head>
 <body>
-<pre>
+  <pre>
 
 今维美.塞希尔
   源素.能
@@ -50,6 +50,16 @@
       Reflect.Moive.Observer&Guest
     Screen.Reflect.Conduct.Effect.Watcher
   磁性.词性
+ 
+  RectPond:FrecketPendine:Impending
+    Caerer.Computer.MaleFrist.Conduct.Example:
+      VisualGame.HealthPoint.Impend.NearDeath.Quit.Influence
+      Creativity.Gender.Slur
+      Keyword:Report
+        Fox~Butterfly's Glass.Cartoon.NinjiaTurtle.Ayblair.Career
+        Moive.JackieChen.FormulaGrand//霹雳火
+        Geo.Bridge.Beixin.Alley.HouyongK.Correspondent
+  Fond.Mantal
 赛瑞尔//Serial
 
 Nox.Norton.Vknet  
@@ -130,6 +140,7 @@ Africa.America.Tryide.Tide.Black
   Ace.Trans.Person
   Kater.Hole.hoil~BlackDeath
 EyeFreak.Steak
+
 
 </pre>
 </body>
