--- a/Rastera/asnic/rastera/kin-group.html
+++ b/Rastera/asnic/rastera/kin-group.html
@@ -141,7 +141,23 @@ Africa.America.Tryide.Tide.Black
   Kater.Hole.hoil~BlackDeath
 EyeFreak.Steak
 
+Kid.Start
+  Kidrawn.Ruined.MasterPieces.Renliy.Think.Coreket//日本名画 
+  Kiss(Coaco.Underbody.Mix?.HookWith.EyenYang)Rivals
+  回LIST涨潮 乌金纯
+  周国权.粥锅圈.旋脏.点卯.世家庄 
+  Ace.Tongue
+    舌面三角冰氺链拽 冰山撕裂伤
+  KidLike.Research.Pet.SteppedInto.Family
+Kid.Append
 
+巴西方.新墨西哥.关键字：面
+  仙童 断口 处蔻
+  鱼面焖?=补水角 
+  维赛德.面.干了.不自由
+  拉丁梅.地峡.烟草.西眼.仙架
+  可卡因感勒(马) 冰毒 
+把媳妇.囡镁轴
 </pre>
 </body>
 </html>
