space ranger,generic mian down 4 left?

--- a/AutoDesk/dct-pixar-med.html
+++ b/AutoDesk/dct-pixar-med.html
@@ -5,7 +5,7 @@
     <title></title>
 </head>
 <body>
-<pre>
+  <pre>
 *Device:Comsek:Bodypart //dct
     keb:Keyboard(hand)
     mos:Mouse(hand)
@@ -79,19 +79,44 @@ Pixel-Array
   框方：中文字设计 多触点设计 语言文字CAD
   
   英文三字码 //HandleStick EnjoyOffset BeiTong.Joystick(xyz)Adjust
-      墙墙墙墙墙门墙墙墙墙墙墙墙墙墙墙墙墙墙墙墙墙     
-      墙                                                   墙
-      窗厨厨
-      窗房房                                              墙         
-      窗  桌子                                            墙
-      墙墙墙墙墙墙墙墙门门墙墙墙墙墙墙墙墙墙墙墙墙     
-      墙           墙
-      窗   床床
-      墙柜床床柜
-      墙墙墙墙墙墙墙墙门墙墙
-                      墙盆     墙
-                      墙浴  池墙
-                      墙墙墙墙墙
+   *  墙墙墙墙墙门墙墙墙墙墙墙墙墙墙墙墙墙墙墙墙墙     
+   *  墙                                                   墙
+   *  窗厨厨
+   *  窗房房                                              墙         
+   *  窗  桌子                                            墙
+   *  墙墙墙墙墙墙墙墙门门墙墙墙墙墙墙墙墙墙墙墙墙     
+   *  墙           墙
+   *  窗   床床
+   *  墙柜床床柜
+   *  墙墙墙墙墙墙墙墙门墙墙
+   *                  墙盆     墙
+   *                  墙浴  池墙
+   *                  墙墙墙墙墙
+  
+/* 只从上往下 下不上
+*  C struct
+*  C++ 
+* 上下都可以 
+*  C#
+* Java
+* Script a();
+* function b() { alert("b") }
+* function a() {  b();  } 
+
+*interface I { }
+*interface P:I{ }
+*interface N:P,I{ }
+*//中间类 
+*static class Sim{ };
+*class Amid{ };
+*//end
+*class A{ }
+*class B:A { }
+*class C:A { }
+*//不能派生类
+*struct S:A {};
+*struct Q { }; 
+*/
 asm.tbc
   cpp  #define
     gdi
@@ -115,6 +140,40 @@ asm.tbc
 
   end
 asm.tbc.arm
+
+Cxp.Jav.Jvm.Net 
+  空间
+   程序集(结构体（函数（）类名)
+   空间名(系统自带)
+  类型
+    Object
+    String
+    Generic //类型就是类型 值就是值
+  值
+      const.value:absock.types.examples:1,"string",'c',true,
+      readonly(static.returned,new.returned)
+  方法 
+    Attribute
+      #define[condition(),codition()]
+      Partial?.Canbein.Utilize.
+    Property  
+      get.return:
+        struct
+        class
+        object
+        string
+        value.defined.constanted.others
+        
+      set.value.can.wrappered.functional
+   
+    ProtectLevel:3PI
+    存放
+    Dct.Mem
+      Static
+      new
+   底层
+    DLLImport
+   执行
 </pre>
 </body>
 </html>
