--- a/AngelNetwork/analytical/advent.html
+++ b/AngelNetwork/analytical/advent.html
@@ -2,7 +2,7 @@
 <head><title></title></head>
 <script src="../content/jquery/jquery-3.5.1.min.js"></script>
 <body id="b">
-    <pre id="editor">
+  <pre id="editor">
 
 Analytical
     live being towards        
@@ -190,11 +190,7 @@ Compiler.Deploy
 End
 冬汽癞
 Carbon Hydric
-Hdc
-        hardware
-        device
-        compiler
-        celly
+ 
 
 Knucle number
           o = "anti-脑焖 cannot project fusion out"
@@ -266,29 +262,16 @@ Sumit.Lonic
         Axis.center.inside&outside:border&kolor
 End
 
-Covid:Computer Laptop Celly    
-    communicate:socket wifi
-    interface.mainboard
-    control
-    input
-       storage.read.hardisk|memory
-       write.hardisk|memory    
-    output
-    voice.speaker
-    speak.micorphone
-    display.screen
-
-    Renliy.Human.Rockmega:Found.Difference
-    hand
-    eye.brain.ear
-    oral verbal
-
+ 
+Dct.Renliy.Human.Rockmega:Found.Difference
+   
 Aisock
     Flat.DisplayScreen.3d.Gaps.Analytical.Metric.Meticals
 Webster
     单条 与 三角 //Advertisaiz
 Curl
     Thread for each website enum 2 square
+
 </pre>
     <script type="text/javascript">
         var p = $("#editor").html();
