--- a/AutoDesk/dct-pixar-med.html
+++ b/AutoDesk/dct-pixar-med.html
@@ -171,9 +171,13 @@ Cxp.Jav.Jvm.Net
     Dct.Mem
       Static
       new
-   底层
+/***************算法*******************/
+/***************  执行 动态 编译*******************/
+  
     DLLImport
-   执行
+    Assembly.load,
+    Thread:WorkQueue
+Anti.Net.Jav.Jom
 </pre>
 </body>
 </html>
