dct.kbdtouchpad,virus,

--- a/AutoDesk/dct-pixar-med.html
+++ b/AutoDesk/dct-pixar-med.html
@@ -141,7 +141,7 @@ asm.tbc
   end
 asm.tbc.arm
 
-Cxp.Jav.Jvm.Net 
+Cxp.Jav.Jvm.Net //Pi(class)Emdment
   空间
    程序集(结构体（函数（）类名)
    空间名(系统自带)
@@ -149,10 +149,10 @@ Cxp.Jav.Jvm.Net
     Object
     String
     Generic //类型就是类型 值就是值
-  值
+  空间:值
       const.value:absock.types.examples:1,"string",'c',true,
       readonly(static.returned,new.returned)
-  方法 
+  空间:方分法 
     Attribute
       #define[condition(),codition()]
       Partial?.Canbein.Utilize.
@@ -167,17 +167,60 @@ Cxp.Jav.Jvm.Net
       set.value.can.wrappered.functional
    
     ProtectLevel:3PI
-    存放
+    Thread
+      String.Each.Notwith.Color
+      WorkQueue
+    空间:存放
     Dct.Mem
       Static
       new
-/***************算法*******************/
-/***************  执行 动态 编译*******************/
-  
-    DLLImport
-    Assembly.load,
-    Thread:WorkQueue
+
 Anti.Net.Jav.Jom
+
+Dynamical.Call
+    DLLImport
+    Assembly.load
+Flexiable.Load
+
+Algorith.KolorTimer
+  dct.cpu.timer:refresh
+  timestamps.minor-second
+    string~object as shape (0~circle,1~Rect~triangle,2~Circle.Eclipse~Rect,3.Circle,4~Triangle)
+    color.acquire
+  loop
+    do.while.for
+  
+  ///summary.dct.hdk.xml
+  void nothing();
+  [attribute("ding")]
+  void example();
+  
+  void nothing(/**/);
+
+  #define
+    smaBIGsma
+    BIGsmaBIG
+    sma0102sma
+    BIG2010BIG
+    sma09
+    BIG09
+
+        enum Lser
+        {
+            [Description("NO1")]
+            Lser =0,
+            [Description("LserH")]
+            LserH = 0,
+            [Description("LserL")]
+            LserL = 0,
+            [Description("LserR")]
+            LserR = 0,
+            [Description("LserF")]
+            LserF = 0,
+            [Description("LserG")]
+            LserG = 0,
+        }
+Ayendo
 </pre>
 </body>
 </html>
