vs2010 re-covered

--- a/Rastera/asnic/crealmytth/prologue.html
+++ b/Rastera/asnic/crealmytth/prologue.html
@@ -12,10 +12,10 @@
 
 <div id="contain" style="height:1000px;">
 <pre id="editor">
-? 赛瑞尔神话  ?utline
+ 赛瑞尔神话  utline
 
 第一章：绝望球鼓推
-　　EP1 衡水荷东焖鼓包牵手观音螃蟹
+　　EP1 恒水荷东焖鼓包牵手观音螃蟹
 第二章：希望骨开来
 　　EP1骨裂剪刀脑神经裂
 　　
