--- a/Rastera/asnic/access-term/term.html
+++ b/Rastera/asnic/access-term/term.html
@@ -209,8 +209,12 @@ hliGaokter
     不是去上
 
 神话 反射 
-          小说 色彩 //TitleShot.FirstAnalytical
-          传说
+小说 色彩 //TitleShot.FirstAnalytical
+传说
+
+疼合适
+沃特森 //Watson
+  like mutually, self felt unmatched heart pain pushed ,coreket
 </pre>
 
         <div id="compiler">
