--- a/Rastera/asnic/analytical/requires.html
+++ b/Rastera/asnic/analytical/requires.html
@@ -57,6 +57,9 @@ DirectX真实材质墙面
     九宫格 七巧板 老虎机
     Prey Dict Pray Dicked 
 Isoc.Vs2008 类图标 中文 三字码
+手柄
+  Camery DNA
+VS Alt VerticalSelect Ket01 Triangle Amendment
 </pre>
 
     
