--- a/Rastera/asnic/arrange-beauty/lifeform.html
+++ b/Rastera/asnic/arrange-beauty/lifeform.html
@@ -58,7 +58,15 @@ PSI?宗教?政治?
 　　 女 
 　　Gay homo
 　　 羹羊美养 人 气人  忍 真气人 动 直 
-
+GenderKind
+  male
+  female
+  temale
+    American cowlady with gun
+  zamark
+  Rexmal
+  Tygles
+  SolidNice,VesaidRecket
 生命形态 Ideological像形 KAP-R
 蛇 狐狸 黄鼠狼 刺猬 老鼠
 　　树迭代 1to1 1toN NtoN 笛卡儿积
