--- a/Rastera/asnic/vesaier/revenez.html
+++ b/Rastera/asnic/vesaier/revenez.html
@@ -118,6 +118,9 @@ Boiling
   Keywordiz:In front of, rivals
   For the experment of cell earth anti-tempertures
   Steam evaporate vividly
+KidUnder
+  Soul-Stiring forever
+  Thread rate
     </pre>
 </body>
 </html>
