--- a/Rastera/asnic/rastera/slept-off.html
+++ b/Rastera/asnic/rastera/slept-off.html
@@ -30,7 +30,9 @@
   C++90 new
   王刚 王亮 七明学校  
 温水煮青蛙
-  怀孕三角族与争斗
+  槐韵三角族与争斗
+    近亲结婚 基因队列类型
+    //Alfed.Good:Adoption a dope en
   动物婴儿水平衡 能量权衡获取
   佛深水去开吾
 </pre>
