--- a/Autodesk/dct-pixar-med.html
+++ b/Autodesk/dct-pixar-med.html
@@ -7,7 +7,7 @@
 <body>
   <pre>
 *Device:Comsek:Bodypart //dct
-    keb:Keyboard(hand)
+    kdb:Keyboard(hand)
     mos:Mouse(hand)
     cam:Camera(Eye,Face,Body)
     scn:Screen.Display.FingerTouch(Eye Finger.Touch,Hand.Scan)
@@ -23,6 +23,8 @@
         usb
         ps2 
         lpt
+        hdmi
+        vga
     cpu:Cpu
     mem:Memory
     hdk:Hardisk        
