--- a/Rastera/asnic/rastera/workgroup.html
+++ b/Rastera/asnic/rastera/workgroup.html
@@ -253,7 +253,8 @@ Left 2  23：08 SleepNot
     罗列:罗塞塔:经验,端口.其他
     
     维金 F1
-        地球史前文明消失与复苏及外界星球联系：
+        地球史前文明消失与复苏 ：
+        外界星球联系：
             维金变形记
             老掌沟奇遇记
             丁丁历险记 地心 
