--- a/Rastera/asnic/serial/persivision.html
+++ b/Rastera/asnic/serial/persivision.html
@@ -2,9 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>解释与劝说Persudable</title>
-    <link href="../../content/lumia-style/lumia.css" rel="stylesheet" />
-    <link href="../../content/lumia-style/ketself.css" rel="stylesheet" />
+    <title>解释与劝说Persudable</title> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
@@ -214,10 +212,19 @@ Definition:PointBack.RangeFirst
 
 附体 好不了 相信?(战争.怨起 宗教,其他 肉猪肋) 江山本峰 //Insane Creazy Retward
 源素不会蛹 笨//Metric.Witch.First.AniKind
+
+界定附体：身体内说话，不由自主做动作
+  附属体
+  方针
+  用与看
+    体内交流
+  出和用  土语：农村人仙双休
+   
+  
+
   </pre>
 
-    </div>
-    <script src="../../content/ace-editor/ace.js"></script>
+    </div> 
     <script src="../../content/ace-editor/ace-settings.js"></script>
 </body>
 </html>
