--- a/Analytical/analytical/language/maya.html
+++ b/Analytical/analytical/language/maya.html
@@ -1,54 +1,31 @@
 ﻿<!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <meta charset="utf-8" />
+<head> 
     <title></title>
+  <script src="../../models/constant.js" type="text/javascript"></script>
     <script src="../../content/jquery/jquery-3.5.1.min.js" type="text/javascript"></script>
 </head>
 <body>
-    <!--    <div>
-        <input type="file" id="files" style="display: none" onchange="import();" />
-        <input type="button" id="import" value="导入" />
-    </div>-->
+
     <div id="result" style="width: 200px">
     </div>
     <script type="text/javascript">
-        //        $("#import").click(function () {//点击导入按钮，使files触发点击事件，然后完成读取文件的操作。
-        //            $("#files").click();
-        //        });
-        //mind the Fkey refresh by keep pressing
-        var ketlect = "";
+
+      var ketlect = string_empty;
         $(document).keypress(function (event) {
 
-            if (event.keyCode == 13) 
-                ketlect +=  "<br/>";
-            else if (event.keyCode == 32) 
-                ketlect += " ";
+            if (event.keyCode == 13)
+              ketlect += brk;
+            else if (event.keyCode == 32)
+              ketlect += ace;
             else
             //                $("#result").append("" + event.key);
                 ketlect += event.key; 
             $("#result").html(ketlect)
         }).keyup(function (event) {
-        
+
         });
 
-        //        function import() {
-        //            var selectedFile = document.getElementById("files").files[0]; //获取读取的File对象
-        //            var name = selectedFile.name; //读取选中文件的文件名
-        //            var size = selectedFile.size; //读取选中文件的大小
-        //            document.writeln("文件名:" + name + "大小：" + size);
-
-        //            var reader = new FileReader(); //这里是核心！！！读取操作就是由它完成的。
-        //            reader.readAsText(selectedFile); //读取文件的内容
-
-        //            reader.onload = function () {
-        //                document.writeln(this.result); //当读取完成之后会回调这个函数，然后此时文件的内容存储到了result中。直接操作即可。
-        //            };
-        //        }
-        //        storager.set('test', 123);
-        //        document.getElementById("result").innerHTML = storager.get('test')  //123
-        //        //document.getElementById("result").innerHTML = "你在按钮上已经点击了 " +
-        //        //    localStorage.clickcount +  + "次。";
     </script>
 </body>
 </html>
