--- a/Rastera/asnic/access-term/term.html
+++ b/Rastera/asnic/access-term/term.html
@@ -215,7 +215,15 @@ hliGaokter
 疼合适
 沃特森 //Watson
 溪延揭
-  like mutually, self felt unmatched heart pain pushed ,coreket
+米伊美
+	EveVision.SuperFacial
+	Intrigue
+	Absorb
+	Impressed
+	
+  like 
+  
+  mutually, self felt unmatched heart pain pushed ,coreket
 </pre>
 
         <div id="compiler">
