--- a/Rastera/asnic/access-term/term.html
+++ b/Rastera/asnic/access-term/term.html
@@ -216,14 +216,15 @@ hliGaokter
 沃特森 //Watson
 溪延揭
 米伊美
-	EveVision.SuperFacial
-	Intrigue
-	Absorb
-	Impressed
-	
-  like 
-  
+ EveVision.SuperFacial
+ Intrigue
+ Absorb
+ Impressed
+ like 
   mutually, self felt unmatched heart pain pushed ,coreket
+烟后忘
+  抽完烟以后忘记过程中的点
+
 </pre>
 
         <div id="compiler">
