--- a/Rastera/asnic/arrange-beauty/mfs.html
+++ b/Rastera/asnic/arrange-beauty/mfs.html
@@ -54,6 +54,7 @@ Gaphole 上下前后左右
     [女~♂][男~♀]
     Arrange([9 11]) { H△W (ado pub im) pulse }
     Beauty( β日16 β月17 ){}//花季雨季
+美赞晨
 
 结束 .-△○□◇⊕〇
 </pre>
