--- a/Rastera/asnic/serial/persivision.html
+++ b/Rastera/asnic/serial/persivision.html
@@ -219,13 +219,12 @@ Definition:PointBack.RangeFirst
   用与看
     体内交流
   出和用  土语：农村人仙双休
-   
-  
-
+  不从口出 酒十蛹匹符
+萨尼克
+  InstantBein.Transed
   </pre>
 
-    </div> 
-    <script src="../../content/ace-editor/ace-settings.js"></script>
+
 </body>
 </html>
 <!--
