--- a/Rastera/asnic/rastera/slept-off.html
+++ b/Rastera/asnic/rastera/slept-off.html
@@ -127,7 +127,7 @@ GeoScript.GeoGraphic.Besided
           M
           W
     Aerorith:Earth
-    Cosine.Shape.Angled
+    Cyos.kosine.Shape.Angled //磁欧石
     Enzo.Origin
 
     标量是否可以用美来形容
@@ -143,11 +143,18 @@ GeoScript.GeoGraphic.Besided
   Water Like
   Group Be Kause //勇敢的心 
   
-  Geodem.Earth.Another.Outside
-
+  Geodem.Earth.Another.Outside    
+    West.Amid.East
+      Opporturnitst
+        Individual.Grouply(KorenGatie.Perpotion)Kollected.Mutiplely
+      RangeOpen:73-82
+      mirrage
+      LooseRage:64-73
   Geo.Ketself.Underworld.Downside
 
   自然怀孕  宗教神陨 男女受孕
+    同性恋 重力 //gay home
+  人工智能
   Ab so  
     clean.
     I lute //apsoda apisodia
