--- a/Rastera/asnic/rastera/slept-off.html
+++ b/Rastera/asnic/rastera/slept-off.html
@@ -104,7 +104,7 @@ Ceovate.GeoSprite?:ZeusHerde.Scalewater
             Ceovate(VisionPart.Water)Selebrine
             Outside.Cosin.Doine.What
           *Solid.Shape.Regroup//三角族标量成就感 但是
-           Ionic.Trade.Ass.Triangle 
+           Ionic.Trade.AssHaier.Triangle 
          Crab?:Group.BeinKause.EvalBlance:WaterBoolean
         Love.SelfGet:Transcolor Kause
         Maked          
@@ -122,12 +122,15 @@ Ceovate.GeoSprite?:ZeusHerde.Scalewater
 GeoScript.GeoGraphic.Besided
 
 因缘：爱昂尼克:阿芙洛狄特 维赛德.阿狄丽娜 //Lines:75s
-  Absock.Dimond  
-    Maria L Venus
-          M
-          W
-    Aerorith:Earth
-    Cyos.kosine.Shape.Angled //磁欧石
+  Absock.Dimond //Αγάπη
+  	Latinie.amor:English.sheild: //盾牌 耕田 打仗提戈 我 自己干自己 
+		  Maria L Venus
+		        M
+		        W
+		  Aerorith:Earth    
+		  LatineEnglish:clay.china.stick-grease~ings
+		  	Cyos.kosine.Shape.Angled //磁欧石
+		  English.Love.Latinie.clyde
     Enzo.Origin
 
     标量是否可以用美来形容
@@ -155,15 +158,15 @@ GeoScript.GeoGraphic.Besided
   自然怀孕  宗教神陨 男女受孕
     同性恋 重力 //gay home
   人工智能
-  Ab so  
+  Ab~so  
     clean.
     I lute //apsoda apisodia
     klean.clear
-  Ab.
+  Ab.ly
   
 源因
 
-关键? 松回纵 ltsz
+关键:松回纵 ltsz
 </pre>
 </body>
 </html>
