--- a/Rastera/asnic/access-term/term.html
+++ b/Rastera/asnic/access-term/term.html
@@ -211,20 +211,30 @@ hliGaokter
 神话 反射 
 小说 色彩 //TitleShot.FirstAnalytical
 传说
-
-疼合适
-沃特森 //Watson
-溪延揭
-米伊美
- EveVision.SuperFacial
- Intrigue
- Absorb
- Impressed
- like 
-  mutually, self felt unmatched heart pain pushed ,coreket
-烟后忘
-  抽完烟以后忘记过程中的点
-
+中文术语节点
+  疼合适
+  沃特森 //Watson
+  溪延揭
+  米伊美
+   EveVision.SuperFacial
+   Intrigue
+   Absorb
+   Impressed
+   like 
+    mutually, self felt unmatched heart pain pushed ,coreket
+  烟后忘
+    抽完烟以后忘记过程中的点
+  拉稀氏
+  课中机
+  科狼嗬
+  脏那
+  替他王
+  天几巴
+  百灯箱房 拜登相仿
+  金涟 
+  娘炮 
+  气华
+  林牛克斯
 </pre>
 
         <div id="compiler">
